--- a/index.html
+++ b/index.html
@@ -1,111 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SohezSoft is a startup founded by Sohel Sayyed in 2024, specializing in Android apps, websites, and SEO services. We help businesses establish a strong digital presence.">
-    <meta name="keywords" content="Android apps, websites, SEO, web development, SohezSoft, Sohel Sayyed">
-    <meta name="author" content="Sohel Sayyed">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SohezSoft | Android Apps, Websites, SEO</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            <h1>SohezSoft</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                </ul>
-                <div class="menu-toggle" id="menu-toggle">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-            </nav>
-        </div>
-    </header>
-
-    <section id="home">
-        <div class="hero">
-            <h2>Transform Your Digital Presence</h2>
-            <p>At SohezSoft, we create innovative Android apps, responsive websites, and provide SEO services that drive success.</p>
-            <a href="#services" class="cta-btn">Explore Our Services</a>
-        </div>
-    </section>
-
-    <section id="services">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="service-card">
-                <h3>Android App Development</h3>
-                <p>We specialize in creating user-friendly and powerful Android applications that meet your business goals and deliver excellent user experiences.</p>
+    <meta
+      name="description"
+      content="SohezSoft is a startup founded by Sohel Sayyed in 2024, specializing in Android apps, websites, and SEO services. We help businesses establish a strong digital presence."
+    />
+    <meta
+      name="keywords"
+      content="Android apps, websites, SEO, web development, SohezSoft, Sohel Sayyed"
+    />
+    <meta name="author" content="Sohel Sayyed" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Nunito+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href=" https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css "
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <div>
+      <header>
+        <div id="top-sticky-bar">
+          <div>
+            <a href="/">
+              <span>Sohezsoft</span>
+            </a>
+          </div>
+          <div>
+            <div id="hamburger-menu" onclick="navToggle()">
+              <div></div>
+              <div></div>
+              <div></div>
             </div>
-            <div class="service-card">
-                <h3>Website Development</h3>
-                <p>Our team builds visually appealing, mobile-friendly websites that not only look great but also function seamlessly across all devices.</p>
-            </div>
-            <div class="service-card">
-                <h3>SEO Services</h3>
-                <p>We offer comprehensive SEO strategies to help your website rank higher on search engines, increase traffic, and build online authority.</p>
-            </div>
+          </div>
         </div>
-    </section>
-
-    <section id="about">
-        <div class="container">
+        <nav id="nav">
+          <div>
+            <ul>
+              <li onclick="onPageNavigateTo('hero-section')">Home</li>
+              <li onclick="onPageNavigateTo('about')">About</li>
+              <li onclick="onPageNavigateTo('service')">Services</li>
+              <li onclick="onPageNavigateTo('contact')">Contact</li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <section id="hero-section">
+          <div>
+            <h1>
+              Discover modern solutions to grow <span>your business</span> with
+              Sohezsoft.
+            </h1>
+            <h2>
+              Sohezsoft: Expert digital marketing and web development solutions
+              to boost your business growth.
+            </h2>
+            <button type="button" onclick="onPageNavigateContact('contact')">Get Start</button>
+          </div>
+          <div>
+            <figure>
+              <img
+                alt="Grapic-Image"
+                src="./assets/icons/hero.png"
+                width="100%"
+              />
+            </figure>
+          </div>
+        </section>
+        <section id="about">
+          <div>
             <h2>About Us</h2>
-            <p>Founded by Sohel Sayyed in 2024, SohezSoft is dedicated to providing top-tier Android app development, website creation, and SEO services. Our mission is to help businesses grow digitally and achieve their goals by offering cutting-edge technology and digital strategies.</p>
-            <p>With a focus on quality and customer satisfaction, we ensure every project is executed with precision and care. We believe in building long-term relationships with our clients and empowering them with the best digital solutions.</p>
-        </div>
-    </section>
-
-    <section id="portfolio">
-        <div class="container">
-            <h2>Our Portfolio</h2>
-            <div class="portfolio-item">
-                <h3>Mobile App for ABC Corporation</h3>
-                <p>Developed a custom mobile app for ABC Corporation, improving their customer engagement and streamlining business operations.</p>
+            <p>
+              Founded by Sohel Sayyed in 2024, SohezSoft is dedicated to providing
+              top-tier Android app development, website creation, and SEO
+              services. Our mission is to help businesses grow digitally and
+              achieve their goals by offering cutting-edge technology and digital
+              strategies. 
+              With a focus on quality and customer satisfaction, we ensure every
+              project is executed with precision and care. We believe in building
+              long-term relationships with our clients and empowering them with
+              the best digital solutions.
+            </p>
+          </div>
+          <div>
+            <figure>
+              <img
+                loading="lazy"
+                alt="Grapic-Image"
+                src="./assets/icons/about.svg"
+                width="100%"
+              />
+            </figure>
+          </div>
+        </section>
+        <section id="service">
+          <div>
+            <h2>Services</h2>
+          </div>
+          <div class="card-container">
+            <div class="card">
+              <div class="card-item">
+                <figure>
+                  <img
+                    src="./assets/icons/career-growth.svg"
+                    alt="Social Media Marketing"
+                    loading="lazy"
+                  />
+                </figure>
+                <h3>Social Media Marketing</h3>
+                <p>
+                  Boost your brand’s visibility and engagement with Sohezsoft's
+                  social media marketing strategies. We help you connect with your
+                  audience, increase followers, and drive sales through targeted
+                  campaigns.
+                </p>
+              </div>
             </div>
-            <div class="portfolio-item">
-                <h3>Website for XYZ Retail</h3>
-                <p>Designed and developed a fully responsive e-commerce website for XYZ Retail, increasing their online sales by 50%.</p>
+  
+            <div class="card">
+              <div class="card-item">
+                <figure>
+                  <img
+                    src="./assets/icons/browser.svg"
+                    alt="Web Development"
+                    loading="lazy"
+                  />
+                </figure>
+                <h3>Web Development</h3>
+                <p>
+                  Transform your online presence with our expert web development
+                  services. From responsive design to seamless user experience,
+                  Sohezsoft crafts websites that drive engagement and
+                  conversions.
+                </p>
+              </div>
             </div>
-            <div class="portfolio-item">
-                <h3>SEO Strategy for 123 Enterprises</h3>
-                <p>Created a comprehensive SEO strategy for 123 Enterprises, boosting their website traffic by 200% in six months.</p>
+  
+            <div class="card">
+              <div class="card-item">
+                <figure>
+                  <img
+                    src="./assets/icons/tablet-android-alt.svg"
+                    alt="Android App"
+                    loading="lazy"
+                  />
+                </figure>
+                <h3>Android App Development</h3>
+                <p>
+                  Unlock the potential of mobile technology with our Android app
+                  development solutions. At Sohezsoft, we create intuitive and
+                  powerful apps tailored to meet your business needs and delight
+                  your users.
+                </p>
+              </div>
             </div>
+  
+            <div class="card">
+              <div class="card-item">
+                <figure>
+                  <img
+                    src="./assets/icons/dashboard.svg"
+                    alt="SEO"
+                    loading="lazy"
+                  />
+                </figure>
+                <h3>SEO (Search Engine Optimization)</h3>
+                <p>
+                  Improve your website’s ranking and attract more traffic with
+                  Sohezsoft’s SEO services. Our proven techniques and strategies
+                  ensure your business stands out in search engine results,
+                  driving organic growth.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="contact">
+          <div><h2>Contact Us</h2></div>
+          <div class="contact-container">
+            <div class="contact-item">
+              <div>
+                <h3>Call Us</h3>
+                <p>+91 7887614788</p>
+              </div>
+              <div>
+                <h3>Email Us</h3>
+                <a href="mailto:techsohez@gmail.com"
+                  ><p>techsohez@gmail.com</p></a
+                >
+              </div>
+            </div>
+            <div class="contact-form-container">
+              <form action="">
+                <h3>Message</h3>
+  
+                <input
+                  type="text"
+                  name="name"
+                  id="name-input"
+                  placeholder="Name"
+                  required
+                />
+  
+                <input
+                  type="email"
+                  name="email"
+                  id="email-input"
+                  placeholder="Email"
+                  required
+                />
+  
+                <textarea
+                  placeholder="Message"
+                  id="message-input"
+                  required
+                ></textarea>
+  
+                <input type="submit" id="form-sumbit-button" value="Send" />
+              </form>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer id="footer">
+        <div class="social-media">
+          <h3>Social Media</h3>
+          <div>
+            <a href="https://www.instagram.com/Sohezsoft" target="_blank" rel="noopener">
+              <img src="./assets/icons/footer/instagram.svg" alt="instagram" loading="lazy" />
+            </a>
+  
+            <a href="https://api.whatsapp.com/send?phone=+917887614788" target="_blank" rel="noopener">
+              <img src="./assets/icons/footer/whatsapp.svg" alt="whatsapp" loading="lazy" />
+            </a>
+  
+            <a href="mailto:techsohez@gmail.com" target="_blank" rel="noopener">
+              <img src="./assets/icons/footer/envelope.svg" alt="Email" loading="lazy" />
+            </a>
+          </div>
         </div>
-    </section>
-
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <p>If you're interested in working with us or have any inquiries, please get in touch. We would love to hear from you!</p>
-            <form action="#" method="POST">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
+        <div>
+          <p>
+            © Copyright Sohezsoft. All Rights Reserved <br />
+            Designed by
+            <a rel="noopener" href="https://sohez.github.io/" target="_blank"
+              >Sohez</a
+            >
+          </p>
         </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 SohezSoft. All rights reserved.</p>
-    </footer>
-
-    <script>
-        const menuToggle = document.getElementById('menu-toggle');
-        const navMenu = document.querySelector('nav ul');
-
-        menuToggle.addEventListener('click', () => {
-            navMenu.classList.toggle('active');
-        });
-    </script>
-</body>
+      </footer>
+    </div>
+    <script src="./assets/js/main.js"></script>
+  </body>
 </html>
